# Chronos-POC

./: .gitignore  README.md  pyproject.toml
clean_polygon_stock_data/: clean_polygon_stock_data.json  clean_polygon_stock_data.py
data_aggregation/: README.md  lambda_function.py  requirements.txt
data_aggregation/config/: config.yaml
data_aggregation/src/: aggregation.py
data_aggregation/utils/: helpers.py
data_engineering/: clean_polygon_stock.json  clean_polygon_stock.py
data_ingestion/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data_ingestion/src/configs/: config.yaml
data_ingestion/src/polygon_data/: aggregation.py  helpers.py  lambda_function.py
frontend/: Dockerfile  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
frontend/utils/: aws_ingress.py
model_training/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fix_pylint_common.py  pipeline.py  pyproject.toml  requirements.clean.txt  requirements.txt
model_training/config/: default-config.yaml
model_training/config/logging/: local.conf
model_training/dockerfiles/: Dockerfile.deploy  Dockerfile.dev  Dockerfile.streamlit  dockerfile
model_training/src/api/: main.py
model_training/src/aws_utils/: aws_data_ingress.py  aws_data_outgress.py
model_training/src/data_processing/: data_cleaning.py  data_loading.py  eda.py
model_training/src/models/: chronos_model.py  prophet_model.py
model_training/src/utils/: aws_utils.py  model_evaluation.py
model_training/test/: test_data_processing.py  test_evaluation.py  test_models.py
model_training/tests/: test_app.py  test_data_processing.py  test_evaluation.py  test_models.py
notebooks/: cloud_eda.ipynb
