[project]
name = "Cloud_Engineering_Backend"
version = "1.0.0"
description = "A microservice for extracting and saving stocks data from Polygon into S3."
requires-python = ">=3.11"
authors = [
    {name = "Yuxuan Huang", email = "yuxuan.eleanor.huang@gmail.com"},
    {name = "Moyi Li", email = "mollubot@gmail.com"},
    {name = "Mingsha Mo", email = "momingsha@gmail.com"},
    {name = "Yee Jun Ow", email = "yeejunow@gmail.com"},
    {name = "Tianyi Zhang", email = "chloe1107w@gmail.com"}
]
maintainers = [
    {name = "Yuxuan Huang", email = "yuxuan.eleanor.huang@gmail.com"},
    {name = "Moyi Li", email = "mollubot@gmail.com"},
    {name = "Mingsha Mo", email = "momingsha@gmail.com"},
    {name = "Yee Jun Ow", email = "yeejunow@gmail.com"},
    {name = "Tianyi Zhang", email = "chloe1107w@gmail.com"}
]
dependencies = [
    "boto3>=1.38.23",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
